--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,21 @@
+.DS_Store
+
 cities_light/data 
 db.sqlite3
+
+.idea/
+
+# cache files for sublime text
+*.tmlanguage.cache
+*.tmPreferences.cache
+*.stTheme.cache
+
+# workspace files are user-specific
+*.sublime-workspace
+
+# project files should be checked into the repository, unless a significant
+# proportion of contributors will probably not be using SublimeText
+*.sublime-project
+
+# sftp configuration file
+sftp-config.json
